; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/radius/extr_radius_client.c_radius_client_reconfig.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/radius/extr_radius_client.c_radius_client_reconfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radius_client_data = type { %struct.hostapd_radius_servers* }
%struct.hostapd_radius_servers = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radius_client_reconfig(%struct.radius_client_data* %0, %struct.hostapd_radius_servers* %1) #0 {
  %3 = alloca %struct.radius_client_data*, align 8
  %4 = alloca %struct.hostapd_radius_servers*, align 8
  store %struct.radius_client_data* %0, %struct.radius_client_data** %3, align 8
  store %struct.hostapd_radius_servers* %1, %struct.hostapd_radius_servers** %4, align 8
  %5 = load %struct.radius_client_data*, %struct.radius_client_data** %3, align 8
  %6 = icmp ne %struct.radius_client_data* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load %struct.hostapd_radius_servers*, %struct.hostapd_radius_servers** %4, align 8
  %9 = load %struct.radius_client_data*, %struct.radius_client_data** %3, align 8
  %10 = getelementptr inbounds %struct.radius_client_data, %struct.radius_client_data* %9, i32 0, i32 0
  store %struct.hostapd_radius_servers* %8, %struct.hostapd_radius_servers** %10, align 8
  br label %11

11:                                               ; preds = %7, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
